feat(audio): add audio playback and waveform visualization
- Implement audio playback using just_audio package
- Add waveform visualization for recordings
- Create audio player dialog with playback controls
- Add responsive UI components with flutter_screenutil
- Update iOS and macOS configurations for audio support
- Add exception handling for audio operations
- Implement waveform processing and visualization
- Add precomputed waveform widget for static visualization
- Add animated playback waveform widget
- Update recording model to include waveform data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.6.1
 
+  # Audio playback
+  just_audio: ^0.9.46
+
+  # Responsive UI
+  flutter_screenutil: ^5.9.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
